<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ActivityReceta">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <ImageView
                android:id="@+id/imagen"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                app:layout_constraintTop_toTopOf="parent"
                tools:layout_editor_absoluteX="0dp" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center_horizontal">

                <TextView
                    android:id="@+id/nombre"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="nombre_receta"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large"
                    tools:layout_editor_absoluteX="166dp"
                    tools:layout_editor_absoluteY="268dp" />

                <TextView
                    android:id="@+id/duracion"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="duracion" />

                <TextView
                    android:id="@+id/comensales"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="comensales" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="30dp">

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/ingredientes"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/lista_ingredientes"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" >

                </androidx.recyclerview.widget.RecyclerView>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/textView8"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/ajustar_proporcion" />

                    <EditText
                        android:id="@+id/ajustar_proporcion"
                        android:layout_width="50dp"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:inputType="number"
                        android:text="4" />

                    <TextView
                        android:id="@+id/textView9"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/comensales" />

                    <Button
                        android:id="@+id/boton_ajustar_prop"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/aceptar" />
                </LinearLayout>

                <TextView
                    android:id="@+id/textView7"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/preparacion"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

                <TextView
                    android:id="@+id/preparacion"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="preparacion" />

            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>